chore: rm param includeRemoved
